# shellpomodoro

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  SECURITY.md  debug_direct.py  debug_test.py  debug_test2.py  pyproject.toml  pytest.ini  test_renderers_actual.py  verify_flags.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml
.kiro/specs/shellpomodoro-cli/: design.md  requirements.md  tasks.md
.venv-check/: pyvenv.cfg
scripts/: cleanup_daemon.py
src/shellpomodoro/: __init__.py  cli.py  display.py  ipc.py  keypress.py
tests/: README.md  __init__.py  test_attach.py  test_cli.py  test_installation.py  test_timer_back_repaint.py  test_viewer_ansi.py  test_viewer_repaint_and_detach.py  test_viewer_single_line.py  test_viewer_singleline.py  utils.py
tests_legacy/: base.py  test_attach.py  test_cli.py  test_integration.py  test_single_line.py  test_viewer_no_generators.py  utils.py
