[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellpomodoro"
version = "1.0.0"
description = "A minimalist Pomodoro timer for the command line"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
keywords = ["pomodoro", "timer", "productivity", "cli", "terminal"]

[project.scripts]
shellpomodoro = "shellpomodoro.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/shellpomodoro"
Repository = "https://github.com/yourusername/shellpomodoro"
Issues = "https://github.com/yourusername/shellpomodoro/issues"

[tool.pytest.ini_options]
addopts = "-q --timeout=10 -k 'not slow and not interactive'"
timeout = 10